feat: refactoring (#10)
* feat: refactoring

* ci: add product event

* test: update integration test configuration

* test: fix sonar issues

* test: fix sonar issues
